--- a/templates/base.html
+++ b/templates/base.html
@@ -112,9 +112,8 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-8 pr-4">
 					<h6>About Us</h6>
-					<p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut
-						iusto rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
-						adipisci pariatur alias officia numquam. Consectetur, aspernatur? </p>
+					<p class="text-justify">This is a project done by Daniel Johnson Maia as part of the <a class="underline-link" href="https://codeinstitute.net/" target="_blank">Code Institute</a> Fullstack Web Developer Course.</p>
+                    <p class="text-justify">DO NOT PURCHASE ANYTHING ON IT. YOU WILL NOT RECEIVE A PRODUCT.</p>
 				</div>
 
 				<div class="col-xs-6 col-md-4">
