--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,8 @@
 				<nav class="navbar navbar-expand-lg navbar-dark">
 					<a class="navbar-brand" href="{% url 'home_page' %}">MagicMarket</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 					<div class="collapse navbar-collapse" id="navbarText">
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item">
@@ -98,6 +98,9 @@
 					</div>
 				</nav>
 			</div>
+            <div class="container-fluid">
+                <div id="navbar-height"></div>
+            </div>
 			<!--Website Content-->
 			{% block content %}
 			{% endblock %}
