--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -2,6 +2,18 @@
 {% load bootstrap_tags %}
 {% block content %}
 
+<!--This displays any messages such as "you have been logged out" etc.-->
+<div class="row relative">
+	{% if messages %}
+	<div class="django-message p-2">
+		{% for message in messages %}
+		<h4> {{message}} </h4>
+		{% endfor %}
+	</div>
+	{% endif %}
+</div>
+<!--End messages section-->
+
 <div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
