--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -12,72 +12,72 @@
 	<div class="row">
 		<form class="col-12" action="{% url 'advanced_search' %}" method="GET">
 			<div>
-				<div class="row advanced-search">
-					<div class="col-sm-12 col-md-3">
-						<h5>Card Name</h5>
-					</div>
-					<div class="co-sm-12 col-md-9">
-						<input class="form-control" type="text" name="title" placeholder="Example: Sol Ring">
-                    </div>
-				</div>
-
-				<div class="row advanced-search">
-					<div class="col-sm-12 col-md-3">
-						<h5>Card Edition</h5>
-					</div>
-				    <div class="co-sm-12 col-md-9">
-						<input class="form-control" type="text" name="edition" placeholder="Example: 1st">
-                    </div>
-				</div>
-
-				<div class="row advanced-search">
-					<div class="col-sm-12 col-md-3">
-						<h5>Card Condition</h5>
-					</div>
-				<div class="co-sm-12 col-md-9">     
-                        <div class="input-group mb-3">
-                            <select class="custom-select" id="inputGroupSelect01" name="condition">
-                                <option selected value="1"></option>
-                                <option value="M">Mint</option>
-                                <option value="NM">Near Mint</option>
-                                <option value="EX">Excellent</option>
-                                <option value="GD">Good</option>
-                                <option value="LP">Lightly Played</option>
-                                <option value="PL">Played</option>
-                                <option value="P">Poor</option>
-                            </select>
+				<div class="form-group">
+					<div class="co-sm-12">
+						<label class="control-label p-1">Card Name</label>
+                        <div>                        
+                            <input class="form-control" type="text" name="title" placeholder="Example: Sol Ring">
                         </div>
                     </div>
 				</div>
 
-                <div class="row advanced-search">
-					<div class="col-sm-12 col-md-3">
-						<h5>Vendor Name</h5>
-					</div>
-				    <div class="co-sm-12 col-md-9">
-						<input class="form-control" type="text" name="vendor">
+                <div class="form-group">
+					<div class="co-sm-12">
+						<label class="control-label p-1">Card Edition</label>
+                        <div>                        
+                            <input class="form-control" type="text" name="edition" placeholder="Example: 1st">
+                        </div>
                     </div>
 				</div>
 
-                <div class="row advanced-search">
-					<div class="col-sm-12 col-md-3">
-						<h5>Min Price (£)</h5>
-					</div>
-				    <div class="co-sm-12 col-md-9">
-						<input class="form-control" value="0" type="number" name="minprice" step=".01" required>
+				 <div class="form-group">
+					<div class="co-sm-12">
+						<label class="control-label p-1">Vendor Name</label>
+                        <div>                        
+                            <div class="input-group mb-3">
+                                <select class="custom-select" id="inputGroupSelect01" name="condition">
+                                    <option selected value="1"></option>
+                                    <option value="M">Mint</option>
+                                    <option value="NM">Near Mint</option>
+                                    <option value="EX">Excellent</option>
+                                    <option value="GD">Good</option>
+                                    <option value="LP">Lightly Played</option>
+                                    <option value="PL">Played</option>
+                                    <option value="P">Poor</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
 				</div>
 
-                <div class="row advanced-search">
-					<div class="col-sm-12 col-md-3">
-						<h5>Max Price (£)</h5>
-					</div>
-				    <div class="co-sm-12 col-md-9">
-						<input class="form-control" value="999999" type="number" name="maxprice" step=".01" required>
+                <div class="form-group">
+					<div class="co-sm-12">
+						<label class="control-label p-1">Vendor Name</label>
+                        <div>                        
+                            <input class="form-control" type="text" name="vendor">
+                        </div>
                     </div>
 				</div>
 
-				<div class="row advanced-search ml-1">
+                <div class="form-group">
+					<div class="co-sm-12">
+						<label class="control-label p-1">Min Price (£)</label>
+                        <div>                        
+                            <input class="form-control" value="0" type="number" name="minprice" step=".01" required>
+                        </div>
+                    </div>
+				</div>
+
+                 <div class="form-group">
+					<div class="co-sm-12">
+						<label class="control-label p-1">Max Price (£)</label>
+                        <div>                        
+                            <input class="form-control" value="999999" type="number" name="maxprice" step=".01" required>
+                        </div>
+                    </div>
+				</div>
+
+				<div class="row advanced-search">
 					<button class="button-effect" type="submit">Search</button>
 				</div>
 			</div>
