made field headers bold in advanced search section

--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -14,7 +14,7 @@
 			<div>
 				<div class="form-group">
 					<div class="co-sm-12">
-						<label class="control-label p-1">Card Name</label>
+						<label class="control-label p-1 bold">Card Name</label>
                         <div>                        
                             <input class="form-control" type="text" name="title" placeholder="Example: Sol Ring">
                         </div>
@@ -23,7 +23,7 @@
 
                 <div class="form-group">
 					<div class="co-sm-12">
-						<label class="control-label p-1">Card Edition</label>
+						<label class="control-label p-1 bold">Card Edition</label>
                         <div>                        
                             <input class="form-control" type="text" name="edition" placeholder="Example: 1st">
                         </div>
@@ -32,7 +32,7 @@
 
 				 <div class="form-group">
 					<div class="co-sm-12">
-						<label class="control-label p-1">Vendor Name</label>
+						<label class="control-label p-1 bold">Condition</label>
                         <div>                        
                             <div class="input-group mb-3">
                                 <select class="custom-select" id="inputGroupSelect01" name="condition">
@@ -52,7 +52,7 @@
 
                 <div class="form-group">
 					<div class="co-sm-12">
-						<label class="control-label p-1">Vendor Name</label>
+						<label class="control-label p-1 bold">Vendor Name</label>
                         <div>                        
                             <input class="form-control" type="text" name="vendor">
                         </div>
@@ -61,7 +61,7 @@
 
                 <div class="form-group">
 					<div class="co-sm-12">
-						<label class="control-label p-1">Min Price (£)</label>
+						<label class="control-label p-1 bold">Min Price (£)</label>
                         <div>                        
                             <input class="form-control" value="0" type="number" name="minprice" step=".01" required>
                         </div>
@@ -70,7 +70,7 @@
 
                  <div class="form-group">
 					<div class="co-sm-12">
-						<label class="control-label p-1">Max Price (£)</label>
+						<label class="control-label p-1 bold">Max Price (£)</label>
                         <div>                        
                             <input class="form-control" value="999999" type="number" name="maxprice" step=".01" required>
                         </div>
