--- a/accounts/templates/edit_password.html
+++ b/accounts/templates/edit_password.html
@@ -4,15 +4,15 @@
 <div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
-			<h3>Edit Profile</h3>
+			<h3>Edit Password</h3>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-12 col-lg-6 pb-5 margin-center">
 			<form method="POST">
-				{%csrf_token%}
-				{{ form.as_p }}
-				<button type="submit">Edit</button>
+				{% csrf_token %}
+				{{ form | as_bootstrap }}
+				<button class="button-effect" type="submit">Change Password</button>
 			</form>
 		</div>
 	</div>
