--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,7 @@
                                     <a class="dropdown-item" href="{% url 'view_history' %}">Order History</a>                                   
 									<div class="dropdown-divider"></div>
 									<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                                    <a class="dropdown-item" href="{% url 'change_password' %}">Reset Password</a>
 								</div>
 							</li>
                             <li class="nav-item">
