fixed returned None intead of HTTP response, it was an indentation issue

--- a/accounts/templates/edit_password.html
+++ b/accounts/templates/edit_password.html
@@ -9,7 +9,7 @@
 	</div>
 	<div class="row">
 		<div class="col-sm-12 col-lg-6 pb-5 margin-center">
-			<form method="POST">
+			<form method="post">
 				{% csrf_token %}
 				{{ form | as_bootstrap }}
 				<button class="button-effect" type="submit">Change Password</button>
