--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -53,39 +53,42 @@
 			<div class="row">
 				{% for card in cards|dictsortreversed:"listing_published_date"|slice:"3" %}
 				<div class="col-sm-12 col-md-4 justify-center pt-3 pb-5">
+
 					<div class="row justify-center">
 						<div>
 							<a href="{% url 'card_detail' card.id %}">
 								<img class="d-block carousel-image margin-center justify-center" src="{{ MEDIA_URL }}{{ card.image }}" alt="Image #{{ forloop.counter }}">
-							        </a>
+							</a>
 						</div>
 					</div>
+
 					<div class="row justify-center center pt-3">
 						<div>
 							<p class="border-bottom p-1">
 								<span class="boldtext">Price: </span>£{{ card.card_price }}
 							</p>
-							<p class="border-bottom p-1">Vendor: <a class="underline-link"
-									href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+							<p class="border-bottom p-1">Vendor: 
+                                <a class="underline-link" href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
 							</p>
-							<p class="p-1"><span class="boldtext">Condition:</span>
-								{{ card.card_condition }}</p>
+							<p class="p-1">
+                                <span class="boldtext">Condition:</span>
+							{{ card.card_condition }}</p>
 							<div class="row justify-center">
 								{% if user.is_authenticated and user != card.user %}
-								<form method="post" action="{% url 'add_to_cart' card.id %}">
-									{% csrf_token %}
-									<div class="input-group cart-form">
-										<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
-										<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
-									</div>
-								</form>
+								    <form method="post" action="{% url 'add_to_cart' card.id %}">
+									    {% csrf_token %}
+									    <div class="input-group cart-form">
+										    <input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
+										    <button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+									    </div>
+								    </form>
 								{% elif user == card.user %}
-								<a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit
-									Listing</a>
+								    <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
 								{% endif %}
 							</div>
 						</div>
 					</div>
+
 				</div>
 				{% endfor %}
 			</div>
@@ -99,6 +102,7 @@
 			<div class="row pt-5">
 				<h1 class="col-12 center">Most Popular Cards</h1>
 			</div>
+
 			<div class="row">
 				{% for card in cards|dictsortreversed:"listing_views"|slice:"3" %}
 				<div class="col-sm-12 col-md-4 justify-center pt-3 pb-5">
@@ -114,23 +118,23 @@
 							<p class="border-bottom p-1">
 								<span class="boldtext">Price: </span>£{{ card.card_price }}
 							</p>
-							<p class="border-bottom p-1">Vendor: <a class="underline-link"
-									href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+							<p class="border-bottom p-1">Vendor: 
+                                <a class="underline-link" href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
 							</p>
-							<p class="p-1"><span class="boldtext">Condition:</span>
-								{{ card.card_condition }}</p>
+							<p class="p-1">
+                                <span class="boldtext">Condition:</span>
+                            {{ card.card_condition }}</p>
 							<div class="row justify-center">
 								{% if user.is_authenticated and user != card.user %}
-								<form method="post" action="{% url 'add_to_cart' card.id %}">
-									{% csrf_token %}
-									<div class="input-group cart-form">
-										<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
-										<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
-									</div>
-								</form>
+								    <form method="post" action="{% url 'add_to_cart' card.id %}">
+									    {% csrf_token %}
+									    <div class="input-group cart-form">
+										    <input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
+										    <button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+									    </div>
+								    </form>
 								{% elif user == card.user %}
-								<a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit
-									Listing</a>
+								    <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
 								{% endif %}
 							</div>
 						</div>
@@ -138,12 +142,14 @@
 				</div>
 				{% endfor %}
 			</div>
+
 		</div>
 	</div>
 	<!--End of SECTION-->
 
 	<!--Deck Help Section-->
 	<div class="container">
+
 		<div class="row border-top">
 			<div class="px-3 py-3 pt-md-4 pb-md-6 margin-center">
 				<div class="row pt-5">
@@ -163,18 +169,19 @@
 				</ul>
 				<p>You can also check out some of other resources below. The MTG community is booming
 					and are always looking to help newcomers!</p>
-
 			</div>
 		</div>
+
 		<div class="row pb-5">
+
 			<div class="col-sm-12 col-md-4 no-spacing text-center">
 				<a class="underline-link pb-1" target="_blank" href="https://edhrec.com/">
 					<img class="resource_image" src="{% static 'img/4x4_1.jpg' %}" alt="edhrec link">
 					<h4 class="pt-2 center">EDH Rec</h4>
-
 				</a>
 				<p class="p-2">Learn about all things EDH!</p>
 			</div>
+
 			<div class="col-sm-12 col-md-4 no-spacing text-center">
 				<a class="underline-link pb-1" target="_blank" href="https://www.reddit.com/r/magicTCG/">
 					<img class="resource_image" src="{% static 'img/4x4_2.jpg' %}" alt="reddit link">
@@ -184,14 +191,15 @@
                 <p class="p-2 m-1">Talk to the community</p>
                 <p class="p-2 m-1">Ask questions!</p>
 			</div>
+
 			<div class="col-sm-12 col-md-4 no-spacing text-center">
 				<a class="underline-link pb-1" target="_blank" href="https://scryfall.com/">
 					<img class="resource_image" src="{% static 'img/4x4_3.jpg' %}" alt="scryfall">
 					<h4 class="pt-2 center">Scryfall</h4>
 				</a>
 				<p class="p-2">Look through the tens of thousands of cards in Magic: The Gathering!</p>
-
 			</div>
+            
 		</div>
 	</div>
 	<!--End of deck help-->
